verif/test/deca/syntax/invalid/extra-comma-verif.res
src/test/deca/syntax/invalid/extra-comma.deca:11:20: mismatched input ')' expecting {'new', 'readInt', 'readFloat', '(', 'true', 'false', 'null', 'this', '-', '!', INT, FLOAT, IDENT, STRING}
